# sage-libs-intent

./: .gitignore  README.md  pyproject.toml  quickstart.sh  setup.py
.github/: copilot-instructions.md
docs/adr/: 0001-intent-boundary-and-explicit-selector-mode.md  0001-unify-factory-and-export-path.md  0002-classification-consistency-regression.md
hooks/: pre-push
src/sage_libs/: __init__.py
src/sage_libs/sage_agentic/: __init__.py
src/sage_libs/sage_agentic/intent/: __init__.py  _register.py  base.py  catalog.py  classifier.py  factory.py  keyword_recognizer.py  llm_recognizer.py  selector_recognizer.py  setup.py  types.py
tests/: test_issue2_boundary_no_fallback.py  test_issue3_unify_exports.py  test_issue4_classification_consistency.py
